Se agrega empaquetado de versión portable sin Java